welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:3: error: not found: value f
 	f=false
        ^SlugSnail:8: error: not found: value f
 	f=true
        ^SlugSnail:10: error: not found: value f
 	f=false
        ^