welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
 def hunt (c: Color) {
 	f=false
 if (isFacingTrail()==true){
 	avance()
 	baisseBrosse()
 	leveBrosse()
 	f=true
 }else{
 	f=false
 }
 
 }
 def isFacingTrail():Boolean = {

var couleuravant: Boolean = true;
if(!estFaceMur){
avance()

if(getCouleurSol()==Color.pink || getCouleurSol()==Color.orange){

    couleuravant=true
}else{
    couleuravant=false


}   
recule()

return couleuravant
}
else{
    return false;
}

}